udagram-vpc-infra.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
    CIDRBlock:
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.0.0.0/16
    ProjectName:
        Description: Please enter the name of the project for reference
        Type: String
    PublicSubnet0CIDR:
        Description: Please enter the IP range (CIDR notation) for this Public Subnet
        Type: String
        Default: 10.0.0.0/24
    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for this Public Subnet
        Type: String
        Default: 10.0.1.0/24
    PrivateSubnet0CIDR:
        Description: Please enter the IP range (CIDR notation) for this Private Subnet
        Type: String
        Default: 10.0.2.0/24      
    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for this Private Subnet
        Type: String
        Default: 10.0.3.0/24            
        
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
            CidrBlock: !Ref CIDRBlock
            EnableDnsHostnames: true
            Tags:
              - Key: Name
                Value: !Ref ProjectName

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: !Ref ProjectName

    InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: 
          !Ref VPC
        InternetGatewayId: 
          !Ref InternetGateway

    PublicSubnet0:
        Type: AWS::EC2::Subnet
        Properties:
          AvailabilityZone: !Select [0, !GetAZs '']
          CidrBlock: !Ref PublicSubnet0CIDR
          MapPublicIpOnLaunch: true
          VpcId: !Ref VPC
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-PUB-SUB0

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          AvailabilityZone: !Select [1, !GetAZs '']
          CidrBlock: !Ref PublicSubnet1CIDR
          MapPublicIpOnLaunch: true
          VpcId: !Ref VPC
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-PUB-SUB1

    PrivateSubnet0:
        Type: AWS::EC2::Subnet
        Properties:
          AvailabilityZone: !Select [0, !GetAZs '']
          CidrBlock: !Ref PrivateSubnet0CIDR
          MapPublicIpOnLaunch: false
          VpcId: !Ref VPC
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-PRI-SUB0

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          AvailabilityZone: !Select [1, !GetAZs '']
          CidrBlock: !Ref PrivateSubnet1CIDR
          MapPublicIpOnLaunch: false
          VpcId: !Ref VPC
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-PRI-SUB1

    NatGatewayEIP0:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
          Domain: vpc
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-EIP0

    NatGatewayEIP1:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
          Domain: vpc
          Tags:
           - Key: Name
             Value: !Sub ${ProjectName}-EIP1

    NatGateway0:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGatewayEIP0.AllocationId
            SubnetId: !Ref PublicSubnet0
            Tags:
              - Key: Name
                Value: !Sub ${ProjectName}-NatGat0

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGatewayEIP1.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags:
              - Key: Name
                Value: !Sub ${ProjectName}-NatGat1

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
          Tags: 
            - Key: Name
              Value: !Sub ${ProjectName}-PUB-RouteTable
          VpcId: !Ref VPC

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
  
    PublicSubnetRouteAssociation0:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet0

    PublicSubnetRouteAssociation1:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet1

    PrivateRouteTable0:
      Type: AWS::EC2::RouteTable
      Properties: 
        Tags: 
          - Key: Name
            Value: !Sub ${ProjectName}-PRI-RouteTable0
        VpcId: !Ref VPC

    DefaultPrivateRoute0:
        Type: AWS::EC2::Route
        DependsOn: NatGateway0
        Properties:
            RouteTableId: !Ref PrivateRouteTable0
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway0

    PrivateSubnetRouteAssociation0:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateRouteTable0
          SubnetId: !Ref PrivateSubnet0

    PrivateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties: 
        Tags: 
          - Key: Name
            Value: !Sub ${ProjectName}-PRI-RouteTable1
        VpcId: !Ref VPC

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        DependsOn: NatGateway1
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnetRouteAssociation1:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateRouteTable1
          SubnetId: !Ref PrivateSubnet1


Outputs:
    VPC: 
        Description: VPC ID
        Value: !Ref VPC
        Export:
          Name: !Sub ${ProjectName}-VPCID

    PublicRouteTable: 
        Description: Public Route Table ID
        Value: !Ref PublicRouteTable
        Export:
          Name: !Sub ${ProjectName}-PUB-RouteTableID

    PrivateRouteTable0: 
        Description: Private Route Table 0 ID
        Value: !Ref PrivateRouteTable0
        Export:
          Name: !Sub ${ProjectName}-PRI-RouteTable0

    PrivateRouteTable1: 
        Description: Private Route Table 1 ID
        Value: !Ref PrivateRouteTable1
        Export:
          Name: !Sub ${ProjectName}-PRI-RouteTable1

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnet0, !Ref PublicSubnet1 ]]
        Export:
          Name: !Sub ${ProjectName}-PUB-SUBNETS

    PublicSubnet0: 
        Description: Public Subnet 0 ID
        Value: !Ref PublicSubnet0
        Export:
          Name: !Sub ${ProjectName}-PUB-SUB0

    PublicSubnet1: 
        Description: Public Subnet 1 ID
        Value: !Ref PublicSubnet1
        Export:
          Name: !Sub ${ProjectName}-PUB-SUB1

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnet0, !Ref PrivateSubnet1 ]]
        Export:
          Name: !Sub ${ProjectName}-PRI-SUBNETS

    PrivateSubnet0: 
        Description: Private Subnet 0 ID
        Value: !Ref PrivateSubnet0
        Export:
          Name: !Sub ${ProjectName}-PRI-SUB0

    PrivateSubnet1: 
        Description: Private Subnet 1 ID
        Value: !Ref PrivateSubnet1
        Export:
          Name: !Sub ${ProjectName}-PRI-SUB1
